update post: Dr. Werner Vogels on the Art of Being a Frugal Architect

--- a/clpln70s4000408l4bzwm2q82.md
+++ b/clpln70s4000408l4bzwm2q82.md
@@ -1,8 +1,8 @@
 ---
-title: "Werner Vogels on the Art of Being a Frugal Architect"
+title: "Dr. Werner Vogels on the Art of Being a Frugal Architect"
 datePublished: Thu Nov 30 2023 20:22:32 GMT+0000 (Coordinated Universal Time)
 cuid: clpln70s4000408l4bzwm2q82
-slug: werner-vogels-on-the-art-of-being-a-frugal-architect
+slug: dr-werner-vogels-on-the-art-of-being-a-frugal-architect
 cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1701370034910/f8804f66-1b0a-465f-b042-2098df86c61a.png
 ogImage: https://cdn.hashnode.com/res/hashnode/image/upload/v1701375655767/bd3f9ab8-503f-407d-9181-d2958f3cf069.png
 tags: aws, engineering, architecture, architect, reinvent, reinvent2023
