update post: Dynamically Modifying CloudFront Origin for Country-Specific and A/B Testing

--- a/cm78jp272000009jmd8bb2t6s.md
+++ b/cm78jp272000009jmd8bb2t6s.md
@@ -133,6 +133,10 @@ if (userAgent.includes('mobile')) {
 }
 ```
 
+## Live demo
+
+%[https://www.youtube.com/watch?v=P4oI1DcFSNs] 
+
 ## Summary
 
 With the new `updateRequestOrigin` functionality in CloudFront Functions, developers can build **highly customisable** and **dynamic** content delivery strategies. Whether it's serving country-specific content, conducting A/B tests, or optimising content for different devices, this feature brings greater flexibility to AWS CloudFront.
